--- a/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
@@ -6,54 +6,23 @@
 	signature="com.jzaoralek.scb.ui.common.vm.BaseVM getOrgNameStatic()"?>
      
 <zk>
-	<style>
-		<!-- cut/hide the vertical borders in the grid rows -->
-		tr.z-row td.z-row-inner { border-right: 0px #CCC;  }
-		
-		.z-row:hover > .z-row-inner, .z-row:hover > .z-cell {background:none; !important}
-		
-		.z-tabpanel {
-		    padding: 0px 0px;
-		}		
-	</style>
-	
-	<borderlayout sclass="content-wrapper" >
+	<borderlayout sclass="scb-bl-main" >
 		<north border="none" >
-			<vlayout id="vlayoutElem">
-				<include src="/pages/common/template/navbar.zul" style="margin-bottom: -5px"/>
-				<include src="/pages/common/template/menu.zul"/>
-			</vlayout>
+			<include src="/pages/common/template/navbar.zul"/>
 		</north>
+		
+		<west border="none" width="200px" splittable="false" collapsible="true">
+			<include src="/pages/common/template/side-menu.zul"/>
+		</west>
+		
 		<center border="none" autoscroll="true" hflex="1" >
-			<div self="@{insert(mainContent)}" vflex="1" hflex="1" ></div>
+			<div self="@{insert(mainContent)}" vflex="1" hflex="1" sclass="scb-content"></div>
 		</center>
 	</borderlayout>
 	
 	<script type="text/javascript">
-		// Skryti tlacitek toolbaru, na zaklade Title, coz vim ze neni idealni, volano z Composer
-		function hideToolbarbutton() {
-			var elems = document.getElementsByTagName('*'), i;
-			// , 'Paste'
-			var titlesToHideArr = ['New Book', 'Save Book', 'Export to PDF', 'Sort &#38; Filter', 'Protect Sheet', 'Insert Picture', 'Insert Chart', 'Hyperlink'];
-		    for (i in elems) {
-		    	if (elems[i].className != null) { 
-			    	if (elems[i].className != '') {
-			    		if (elems[i].className.startsWith('z-vlayout-inner'))
-			    		{
-			    			hideElem(elems[i]);
-			    		}
-			    	}
-			    }
-			}
-		}
 		
-		function hideElem(elem) {
-    		elem.style.padding = '0px';
-		}
 	</script>
-	<zscript>
-		//Clients.evalJavaScript("hideToolbarbutton()");
-	</zscript>
 	
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
