--- a/scb-ui-zk/src/main/webapp/resources/css/styles.css
+++ b/scb-ui-zk/src/main/webapp/resources/css/styles.css
@@ -81,6 +81,13 @@ body{
 	margin: 7px 7px;
 }
 
+.scb-navbar .brand-logo-wrapper{
+	display: inline-block;
+	height: 100%;
+	float: left;
+	margin-left: 10px;
+}
+
 .scb-navbar .brand-name{
 	color: #2f353a;
 	font-size: 18px;
@@ -92,11 +99,44 @@ body{
 .scb-navbar .brand-logo{
 	width: 40px;
 	height: 40px;
-	border-radius: 20px; 
-	margin-left: 10px;
+	border-radius: 3px; 
 	margin-right: 6px;
 	position: relative;
 	top: -2px;
+}
+
+.scb-navbar .app-logo-wrapper{
+	width: 200px;
+	height: 100%;
+	border-right: solid 1px #e4e7ea; 
+	display: inline-block;
+	float: left;
+	padding-left: 12px;
+}
+
+.scb-navbar .app-logo-wrapper .app-logo{
+	font-family: 'Faster One' !important;
+	font-size: 25px;
+	text-align: center;
+	line-height: 27px;
+	width: 30px;
+	height: 30px;
+	border-radius: 3px;
+	display: inline-block;
+	vertical-align: middle;
+	border: solid 1px #20a8d8;
+	background-color: #20a8d8;
+	color: #fff;
+	position: relative;
+	top: -3px;
+}
+
+.scb-navbar .app-logo-wrapper .app-name{
+	line-height: 55px;
+	font-family: 'Orbitron' !important;
+	color: #2f353a;
+	font-size: 21px;
+	margin-left: 5px;
 }
 
 /* LOGIN PAGE */
