--- a/scb-ui-zk/src/main/webapp/pages/common/template/footer.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/footer.zul
@@ -1,13 +1,7 @@
-<hlayout spacing="0" style="background: #e4e6e9; border: 1px solid #cfcfcf;">
-	<vbox hflex="1" />
+<div viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.FooterVM')" sclass="scb-footer">
 	
-	<vbox hflex="20" pack="center" align="end" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.FooterVM')" >
-		<hbox align="center" height="50px">
-			${c:l('txt.ui.common.contact')}: 
-			<label value="${vm.orgPhone}" style="white-space: nowrap;" />, 
-			<a href="mailto:${vm.orgEmail} ">${vm.orgEmail} </a>
-		</hbox>
-	</vbox>
+	${c:l('txt.ui.common.contact')}: 
+	<label value="${vm.orgPhone}" style="white-space: nowrap;" />, 
+	<a href="mailto:${vm.orgEmail}">${vm.orgEmail}</a>
 	
-	<vbox hflex="1" />
-</hlayout>
+</div>
