--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -3,26 +3,15 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" >
-		
-		<hlayout spacing="0" visible="false">
-			<vbox hflex="1" />
+	<div 	self="@{define(mainContent)}" 
+			hflex="1" 
+			sclass="scb-view" 
+			viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseListVM')">
 			
-			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.menu.courses')}" menuSelected="menu_courseList" />
-			</vbox>
+		<vlayout hflex="1">
+			<label value="${c:l('txt.ui.menu.courses')}" sclass="scb-headline-big"/>
 			
-			<vbox hflex="1" />
-		</hlayout>
-		
-		<hlayout spacing="0">
-		
-			<vbox hflex="1" />
-			
-			<vbox hflex="20" pack="center" 
-				viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseListVM')">
-				
-				<listbox model="@load(vm.courseList)"
+			<listbox model="@load(vm.courseList)"
 					id="courseList"
 					hflex="1"
 					style="margin-top: 20px;"
@@ -30,74 +19,76 @@
 					pageSize="10"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
-			        <auxhead>
-			            <auxheader class="header" colspan="4" >
-			            	<hbox hflex="1" height="42px" align="center" >
-				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox vflex="1" align="center">
-			            				<label value="${c:l('txt.ui.menu.courses')}" style="margin-right:5px;" />
-			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
-			            					sclass="btn-warning" 
-			            					iconSclass="z-icon-plus"
-			            					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
-			            			</hbox>
-			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
-			            			<hbox vflex="1" pack="center" align="center">
-			            				<!-- Rocnik -->
-			            				<include src="/pages/common/component/context-year.zul"/>
-			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
-		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
-									</hbox>
-								</vbox>
-							</hbox>
-			            </auxheader>
-			        </auxhead>
-			        
-			        <!-- Filter -->
-					<auxhead height="37px">
-						<auxheader class="filter">
-							<textbox hflex="1"
-								instant="true"
-								value="@bind(vm.filter.courseName)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-					</auxhead>
-					
-			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="1" />
-			            <listheader label="${c:l('txt.ui.common.description2')}" sort="auto(description)" align="left" hflex="1" />
-			            <listheader label="${c:l('txt.ui.common.participantCount')}" sort="auto(participantListCount)" align="center" hflex="min"  />
-			            <listheader width="140px" align="center" />
-			        </listhead>
-			         
-			        <template name="model">
-			            <listitem>
-			                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell>
-			                	<button label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
-			                	<menupopup id="menuCourse_${each.uuid}" >
-									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" visible="${vm.isLoggedUserInRole('ADMIN')}" />
-									<menuitem label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" visible="${vm.isLoggedUserInRole('ADMIN')}"  />
-						       	</menupopup>
-			                </listcell>
-			            </listitem>
-			        </template>
-			    </listbox>
-			</vbox>
-			
-			<vbox hflex="1" />
-			
-		</hlayout>
+		        <auxhead>
+		            <auxheader class="header" colspan="4" >
+		            	<hbox hflex="1" height="42px" align="center" >
+			            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+		            			<hbox vflex="1" align="center">
+		            				<label value="${c:l('txt.ui.menu.courses')}" style="margin-right:5px;" />
+		            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
+		            					sclass="add-item-btn" 
+		            					iconSclass="z-icon-plus"
+		            					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
+		            			</hbox>
+		            		</vbox>
+		            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
+		            			<hbox vflex="1" pack="center" align="center">
+		            				<!-- Rocnik -->
+		            				<include src="/pages/common/component/context-year.zul"/>
+		            				<button iconSclass="z-icon-download" 
+		            					onClick="@command('exportToExcel',listbox=courseList)" 
+		            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+		            					sclass="toolbar-btn"/>
+	            					<button iconSclass="z-icon-refresh" 
+	            						onClick="@command('refreshDataCmd')" 
+	            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
+	            						sclass="toolbar-btn"/>
+								</hbox>
+							</vbox>
+						</hbox>
+		            </auxheader>
+		        </auxhead>
+		        
+		        <!-- Filter -->
+				<auxhead height="37px">
+					<auxheader class="filter">
+						<textbox hflex="1"
+							instant="true"
+							value="@bind(vm.filter.courseName)"
+							onChange="@command('filterDomCmd')" />
+					</auxheader>
+					<auxheader class="filter">
+					</auxheader>
+					<auxheader class="filter">
+					</auxheader>
+					<auxheader class="filter">
+					</auxheader>
+				</auxhead>
+				
+		        <listhead>
+		            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="1" />
+		            <listheader label="${c:l('txt.ui.common.description2')}" sort="auto(description)" align="left" hflex="1" />
+		            <listheader label="${c:l('txt.ui.common.participantCount')}" sort="auto(participantListCount)" align="center" hflex="min"  />
+		            <listheader width="210px" align="center" />
+		        </listhead>
+		         
+		        <template name="model">
+		            <listitem>
+		                <listcell label="${each.name}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+		                <listcell label="${each.description}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+		                <listcell label="${each.participantListCount}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+		                <listcell>
+		                	<button label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
+		                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}, position=after_end" />
+		                	<menupopup id="menuCourse_${each.uuid}" >
+								<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" visible="${vm.isLoggedUserInRole('ADMIN')}" />
+								<menuitem label="Výuka" onClick="@command('courseLearningLessonsCmd', uuid=each.uuid)" />
+								<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" visible="${vm.isLoggedUserInRole('ADMIN')}"  />
+					       	</menupopup>
+		                </listcell>
+		            </listitem>
+		        </template>
+		    </listbox>
+		</vlayout>
 	</div>
 </zk>
